--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="slick-theme.css">
-    <link rel="stylesheet" href="HTML/css/style.min.css">
+    <link rel="stylesheet" href="style.css">
     <title>OPPO | Kompas</title>
 </head>
 <body>
@@ -61,7 +62,7 @@
                     </div>
                     <div class="news__article">
                         <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit voluptatem quos eos nam vel nostrum optio dicta eius ea eum repudiandae accusamus libero, vitae quod odio deserunt culpa, praesentium commodi id aut provident veniam fuga.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit voluptatem quos eos nam vel nostrum optio dicta eius ea eum repudiandae accusamus libero</p>
                     </div>
                 </div>
                 <div class="news__content">
@@ -70,7 +71,7 @@
                     </div>
                     <div class="news__article">
                         <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit voluptatem quos eos nam vel nostrum optio dicta eius ea eum repudiandae accusamus libero, vitae quod odio deserunt culpa, praesentium commodi id aut provident veniam fuga.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit voluptatem quos eos nam vel nostrum optio dicta eius ea eum repudiandae accusamus libero,</p>
                     </div>
                 </div>
                 <div class="news__content">
@@ -79,7 +80,7 @@
                     </div>
                     <div class="news__article">
                         <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit voluptatem quos eos nam vel nostrum optio dicta eius ea eum repudiandae accusamus libero, vitae quod odio deserunt culpa, praesentium commodi id aut provident veniam fuga.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit voluptatem quos eos nam vel nostrum optio dicta eius ea eum repudiandae accusamus libero,</p>
                     </div>
                 </div>
                 <div class="news__content">
@@ -88,16 +89,98 @@
                     </div>
                     <div class="news__article">
                         <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit voluptatem quos eos nam vel nostrum optio dicta eius ea eum repudiandae accusamus libero, vitae quod odio deserunt culpa, praesentium commodi id aut provident veniam fuga.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit voluptatem quos eos nam vel nostrum optio dicta eius ea eum repudiandae accusamus libero</p>
+                    </div>
+                </div>
+                <div class="news__content">
+                    <div class="news__img">
+                        <img src="https://www.arabianbusiness.com/sites/default/files/images/2017/09/11/Dubai-Skyline-canal.jpg">
+                    </div>
+                    <div class="news__article">
+                        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit voluptatem quos eos nam vel nostrum optio dicta eius ea eum repudiandae accusamus libero</p>
+                    </div>
+                </div>
+                <div class="news__content">
+                    <div class="news__img">
+                        <img src="https://www.arabianbusiness.com/sites/default/files/images/2017/09/11/Dubai-Skyline-canal.jpg">
+                    </div>
+                    <div class="news__article">
+                        <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit voluptatem quos eos nam vel nostrum optio dicta eius ea eum repudiandae accusamus libero</p>
                     </div>
                 </div>
             </div>
             
         </div>
         <div class="main__right">
-            <img src="images/300x600.jpg" alt="">
+            <div class="ads__giant">
+                <img src="images/300x600.jpg" alt="">
+            </div>
+            <div class="right__instagram">
+                <div class="title">
+                    <h1>INSTAGRAM</h1>
+                    <div class="line"></div>
+                </div>
+                <div class="instagram__box">
+                    <div class="box__title">
+                        <h3>#NightInHand</h3>
+                        <p>12,110 posts</p>
+                    </div>
+                    <div class="box-items">
+                        <img src="https://www.arabianbusiness.com/sites/default/files/images/2017/09/11/Dubai-Skyline-canal.jpg">
+                        <img src="https://www.arabianbusiness.com/sites/default/files/images/2017/09/11/Dubai-Skyline-canal.jpg">
+                        <img src="https://www.arabianbusiness.com/sites/default/files/images/2017/09/11/Dubai-Skyline-canal.jpg">
+                        <img src="https://www.arabianbusiness.com/sites/default/files/images/2017/09/11/Dubai-Skyline-canal.jpg">
+                        <img src="https://www.arabianbusiness.com/sites/default/files/images/2017/09/11/Dubai-Skyline-canal.jpg">
+                        <img src="https://www.arabianbusiness.com/sites/default/files/images/2017/09/11/Dubai-Skyline-canal.jpg">
+                        <img src="https://www.arabianbusiness.com/sites/default/files/images/2017/09/11/Dubai-Skyline-canal.jpg">
+                        <img src="https://www.arabianbusiness.com/sites/default/files/images/2017/09/11/Dubai-Skyline-canal.jpg">
+                        <img src="https://www.arabianbusiness.com/sites/default/files/images/2017/09/11/Dubai-Skyline-canal.jpg">
+                        <img src="https://www.arabianbusiness.com/sites/default/files/images/2017/09/11/Dubai-Skyline-canal.jpg">
+                        <img src="https://www.arabianbusiness.com/sites/default/files/images/2017/09/11/Dubai-Skyline-canal.jpg">
+                        <img src="https://www.arabianbusiness.com/sites/default/files/images/2017/09/11/Dubai-Skyline-canal.jpg">
+                        <img src="https://www.arabianbusiness.com/sites/default/files/images/2017/09/11/Dubai-Skyline-canal.jpg">
+                        <img src="https://www.arabianbusiness.com/sites/default/files/images/2017/09/11/Dubai-Skyline-canal.jpg">
+                        <img src="https://www.arabianbusiness.com/sites/default/files/images/2017/09/11/Dubai-Skyline-canal.jpg">
+                    </div>
+                    <div class="box__footer">
+                        <p>View more on Instagram</p>
+                    </div>
+                </div>
+            </div>
+            <div class="right__populer">
+                <div class="title">
+                    <h1>TERPOPULER</h1>
+                    <div class="line"></div>
+                </div>
+                <div class="populer__list">
+                    <button>1</button>
+                    <p>Lorem ipsuor, sit amet consecte aspernatur?</p>
+                </div>
+                <div class="populer__list">
+                    <button>2</button>
+                    <p>Lorem ipsuor, sit amet consecte aspernatur?</p>
+                </div>
+                <div class="populer__list">
+                    <button>3</button>
+                    <p>Lorem ipsuor, sit amet consecte aspernatur?</p>
+                </div>
+                <div class="populer__list">
+                    <button>4</button>
+                    <p>Lorem ipsuor, sit amet consecte aspernatur?</p>
+                </div>
+                <div class="populer__list">
+                    <button>5</button>
+                    <p>Lorem ipsuor, sit amet consecte aspernatur?</p>
+                </div>
+            </div>
         </div>
     </section>
+
+    <footer>
+        <p>&copy; 2019 PT. Kompas Cyber Media. All Rights Reserved</p>
+    </footer>
 
 
 
